<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".activities.auth.LoginActivity" android:layout_margin="10dp">

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textFontWeight="700"
        android:layout_marginTop="20dp"
        android:text="@string/login_header"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/unameField"
        app:layout_constraintTop_toBottomOf="@id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:hint="@string/labelName"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:helperTextTextColor="@color/design_default_color_error"
        tools:layout_editor_absoluteX="31dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/labelPassword"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintTop_toBottomOf="@id/unameField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        tools:layout_editor_absoluteX="31dp">
        <com.google.android.material.textfield.TextInputEditText
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/loginContainer"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/labelLogin" />
    </RelativeLayout>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/loginContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/newAccountPrompt"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/new_Account_P"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/registerTextView"
                android:layout_toEndOf="@id/newAccountPrompt"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:text="@string/labelRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>